# minesweeper

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  run.sh
.devcontainer/: devcontainer.json
.run/: Minesweeper (Terminal).run.xml  minesweeper.run.xml
assets/: banner.txt  credits.txt
src/: main.cpp
src/api/controller/: color_manager.cpp  color_manager.hpp  keyboard_controller.cpp  keyboard_controller.hpp  score_board.cpp  score_board.hpp  settings_manager.cpp  settings_manager.hpp  terminal_controller.cpp  terminal_controller.hpp
src/api/game/board/: board_2d.cpp  board_2d.hpp  cell.cpp  cell.hpp  grid_2d.cpp  grid_2d.hpp
src/api/helper/: DeltaTimer.cpp  conversion_helper.cpp  conversion_helper.hpp  delta_timer.cpp  delta_timer.hpp  file_manager.cpp  file_manager.hpp  file_reader.cpp  file_reader.hpp  looped_execution_wrapper.cpp  looped_execution_wrapper.hpp  math_helper.cpp  math_helper.hpp  random_helper.cpp  random_helper.hpp  terminal_helper.hpp  utils.cpp  utils.hpp
src/api/ui/: canvas_element.cpp  canvas_element.hpp  terminal_helper.cpp  terminal_helper.hpp
src/api/ui/canvas/: canvas_element.cpp  canvas_element.hpp  color_manager.cpp  color_manager.hpp  terminal_helper.cpp  terminal_helper.hpp
src/api/ui/scene/: dialogue.cpp  dialogue.hpp  game_scene.cpp  game_scene.hpp  main_selection_scene.cpp  main_selection_scene.hpp  scene.cpp  scene.hpp  test_scene.cpp  test_scene.hpp  transition_scene.cpp  transition_scene.hpp
src/api/ui/scene/scene_elements/: scene_element.cpp
src/api/ui/scene/widgets/: banner_widget.cpp  banner_widget.hpp  column.cpp  column.hpp  row.cpp  row.hpp  text_selection_widget.cpp  text_selection_widget.hpp  widget.cpp  widget.hpp
src/api/ui/widget/: widget.hpp
src/api/ui/widget/reactive_widgets/: board_widget.cpp  board_widget.hpp  selection_widget.cpp  selection_widget.hpp  text_selection_widget.cpp  text_selection_widget.hpp
src/api/ui/widget/widgets/: Rotation.cpp  Rotation.hpp  alignment.cpp  alignment.hpp  banner_widget.cpp  banner_widget.hpp  board_showcase_widget.cpp  board_showcase_widget.hpp  board_widget.cpp  board_widget.hpp  border.cpp  border.hpp  column.cpp  column.hpp  custom_drawer.cpp  custom_drawer.hpp  empty.cpp  empty.hpp  enumeration_widget.cpp  enumeration_widget.hpp  padding.cpp  padding.hpp  rainbow_switcher.cpp  rainbow_switcher.hpp  row.cpp  row.hpp  score_board_view.cpp  score_board_view.hpp  selection_widget.cpp  selection_widget.hpp  stack.cpp  stack.hpp  text_input.cpp  text_input.hpp  timer.cpp  timer.hpp  transition_widget.cpp  transition_widget.hpp  visibility.cpp  visibility.hpp
src/api/ui/widget/widgets/boards/: board_2d_widget.cpp  board_2d_widget.hpp  board_showcase_widget.cpp  board_showcase_widget.hpp  board_widget.cpp  board_widget.hpp
src/api/ui/widget/widgets/border/: border.cpp  border.hpp  border_style.cpp  border_style.hpp
src/api/ui/widget/widgets/dialogues/: controls_dialogue.cpp  controls_dialogue.hpp  credits_dialogue.cpp  credits_dialogue.hpp  inform_dialogue.cpp  inform_dialogue.hpp  input_dialogue.cpp  input_dialogue.hpp  score_board_dialogue.cpp  score_board_dialogue.hpp  settings_dialogue.cpp  settings_dialogue.hpp  simple_dialogue.cpp  simple_dialogue.hpp
src/api/ui/widget/widgets/settings/: bool_setting.cpp  bool_setting.hpp  list_setting.cpp  list_setting.hpp
src/api/ui/widget/widgets/styles/: border_style.cpp  border_style.hpp
